// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrowUpDownIconTest render correctly 1`] = `
<svg
  className="arrow-up-down-icon test className"
  fill="currentColor"
  fontSize={20}
  height="1em"
  stroke="currentColor"
  strokeWidth="0"
  style={
    Object {
      "color": undefined,
    }
  }
  viewBox="0 0 16 16"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0zm-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V11.5z"
  />
</svg>
`;

exports[`BorderIconTest render correctly and work my onClick function 1`] = `
<div
  className="border-icon flex-row test className"
  onClick={[Function]}
>
  <svg
    fill="currentColor"
    fontSize={20}
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 1024 1024"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm176.5 585.7l-28.6 39a7.99 7.99 0 0 1-11.2 1.7L483.3 569.8a7.92 7.92 0 0 1-3.3-6.5V288c0-4.4 3.6-8 8-8h48.1c4.4 0 8 3.6 8 8v247.5l142.6 103.1c3.6 2.5 4.4 7.5 1.8 11.1z"
    />
  </svg>
</div>
`;

exports[`GraphUpDownIconTest render correctly 1`] = `
<div
  className="graph-up-down-icon test className"
>
  <svg
    className="bs-graph-icon icon-up"
    fill="currentColor"
    fontSize={20}
    height="1em"
    stroke="currentColor"
    strokeWidth="0"
    style={
      Object {
        "color": undefined,
      }
    }
    viewBox="0 0 16 16"
    width="1em"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h1v15h15v1H0V0zm10 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 .5.5v4a.5.5 0 0 1-1 0V4.9l-3.613 4.417a.5.5 0 0 1-.74.037L7.06 6.767l-3.656 5.027a.5.5 0 0 1-.808-.588l4-5.5a.5.5 0 0 1 .758-.06l2.609 2.61L13.445 4H10.5a.5.5 0 0 1-.5-.5z"
      fillRule="evenodd"
    />
  </svg>
</div>
`;
